# lkml-bot

./: .env.example  .gitignore  DEPLOY.md  Dockerfile  Makefile  README.md  bot.py  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
migrations/: 001_add_indexes_to_feed_messages.sql  002_add_indexes_to_patch_card_filters.sql  003_create_filter_config_table.sql  004_remove_exclusive_from_patch_card_filters.sql  005_add_to_cc_list_to_patch_cards.sql  README.md
src/lkml/: __init__.py  config.py  scheduler.py
src/lkml/db/: __init__.py  database.py  migrations.py  models.py
src/lkml/db/repo/: __init__.py  email_message_repository.py  feed_message_repository.py  filter_config_repository.py  patch_card_filter_repository.py  patch_card_repository.py  patch_thread_repository.py  subsystem_repository.py
src/lkml/feed/: __init__.py  feed.py  feed_message_classifier.py  feed_monitor.py  types.py  vger_subsystems.py
src/lkml/service/: __init__.py  feed_message_service.py  monitoring_service.py  operation_log_service.py  patch_card_filter_service.py  patch_card_service.py  query_service.py  service.py  subsystem_service.py  thread_service.py
src/lkml/thread/: __init__.py
src/plugins/lkml_bot/: __init__.py  config.py  message_sender.py  multi_platform_thread_sender.py  shared.py
src/plugins/lkml_bot/adapters/: discord_adapter.py  message_adapter.py
src/plugins/lkml_bot/client/: base.py  discord_client.py  feishu_client.py
src/plugins/lkml_bot/commands/: filter.py  help.py  run_monitor.py  start_monitor.py  stop_monitor.py  subscribe.py  unsubscribe.py  watch.py
src/plugins/lkml_bot/renders/: base.py  discord_render.py
src/plugins/lkml_bot/renders/patch_card/: feishu_render.py
src/plugins/lkml_bot/renders/thread/: __init__.py  feishu_render.py  renderer.py
