[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lkml-bot"
version = "0.1.0"
description = "LKML Bot - A mailing list monitoring bot for Linux kernel and other subsystems"
readme = "README.md"
requires-python = ">=3.9, <4.0"
dependencies = [
    "nonebot2[fastapi]>=2.0.0",  # 包含 FastAPI driver 依赖
    "nonebot-adapter-discord>=0.1.8",
    "nonebot-adapter-feishu>=2.6.0",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.19.0",
    "greenlet>=2.0.0",            # SQLAlchemy 异步功能所需
    "pydantic>=2.0.0",
    "httpx>=0.24.0",               # HTTP 客户端（兼容 nonebot2 2.0+，使用 proxy 参数）
    "websockets>=11.0.0",         # WebSocket 支持
    "python-dotenv>=1.0.0",
    "feedparser>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]


[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.nonebot]
adapters = [
    { name = "飞书", module_name = "nonebot.adapters.feishu" },
    { name = "Discord", module_name = "nonebot.adapters.discord" }
]
plugins = []
plugin_dirs = ["src/plugins"]
builtin_plugins = []

# Ruff 代码检查和格式化配置
[tool.ruff]
target-version = "py39"
line-length = 100

# 基础规则集（后续可逐步添加）
select = [
    "E",   # pycodestyle errors（基础错误）
    "W",   # pycodestyle warnings（基础警告）
    "F",   # Pyflakes（未使用的导入、变量等）
    "I",   # isort（导入排序）
]

# 忽略的规则
ignore = [
    "E501",  # line too long（由格式化工具处理）
]

# 排除的目录
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "venv",
    "build",
    "dist",
    "*.egg-info",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.isort]
known-first-party = ["lkml", "lkml_bot"]

# MyPy 类型检查配置（基础配置）
[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
show_error_codes = true

# 忽略缺少类型注解的导入
[[tool.mypy.overrides]]
module = [
    "feedparser.*",
    "nonebot.*",
    "nonebot.adapters.*",
]
ignore_missing_imports = true

[tool.black]
exclude = '''
/(
    src/.*/__init__.py
)/
'''

[tool.pylint."MESSAGES CONTROL"]
disable = [
    # TODO 注释
    "fixme",
    # 设计选择相关的警告
    "too-many-instance-attributes",  # R0902
    "too-few-public-methods",  # R0903
    # 日志格式化：允许使用 f-string（更清晰易读）
    "logging-fstring-interpolation",  # W1203
    # 导入顺序：某些导入需要在函数内部（避免循环导入）
    "wrong-import-position",  # C0413
    "wrong-import-order",  # C0411
    # 导入位置：某些导入需要在函数内部（避免循环导入）
    "import-outside-toplevel",  # C0415
    # 函数参数：某些函数需要多个参数，拆分会导致代码复杂化
    "too-many-arguments",  # R0913
    "too-many-positional-arguments",  # R0917
    # try-except-raise：某些情况下需要重新抛出异常
    "try-except-raise",  # W0706
    # 代码重复：dataclass 定义之间的重复是合理的架构设计（不同层的数据结构）
    "duplicate-code",  # R0801
]

[tool.pylint."FORMAT"]
max-line-length = 120
